--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -210,5 +210,6 @@
   "weightInGrams": "Peso (g)",
   "weightInKg": "Peso (kg)",
   "year": "Anno",
-  "yes": "Sì"
+  "yes": "Sì",
+  "enterValidEmail": "Inserisci un indirizzo email valido"
 }
