fic es and storage

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -49,12 +49,13 @@
   "editStorage": "Editar almacenamiento",
   "email": "Correo electrónico",
   "energy": "Energía",
-  "enterAmount": "Introducir cantidad",
-  "enterBudget": "Introducir presupuesto",
-  "enterEmail": "Por favor, introduce tu correo electrónico",
-  "enterPassword": "Por favor, introduce tu contraseña",
-  "enterProductName": "Introducir nombre del producto",
-  "enterUsername": "Por favor, introduce tu nombre de usuario",
+  "enterAmount": "Insertar cantidad",
+  "enterBudget": "Insertar presupuesto",
+  "enterEmail": "Por favor, inserta tu correo electrónico",
+  "enterPassword": "Por favor, inserta tu contraseña",
+  "enterProductName": "Insertar nombre del producto",
+  "enterUsername": "Por favor, inserta tu nombre de usuario",
+  "enterValidEmail": "Por favor, inserta una dirección de correo electrónica válida",
   "error": "Error",
   "errorUpdatingPassword": "Error al actualizar la contraseña",
   "expenseDeleted": "Gasto eliminado con éxito",
@@ -116,7 +117,7 @@
   "newProduct": "Nuevo producto",
   "no": "No",
   "noAccount": "Sin cuenta",
-  "noAvailableProducts": "No hay productos disponibles, intenta cambiar de categoría o ir de compras",
+  "noAvailableProducts": "No hay productos disponibles, intenta cambiar de categoría o ir de Hacer la compra",
   "noExpensesForPeriod": "No se encontraron gastos para el período seleccionado",
   "noExpensesFound": "No se encontraron gastos",
   "noImageAvailable": "No hay imagen disponible",
@@ -174,8 +175,8 @@
   "selectProducts": "Seleccionar productos",
   "selectSupermarket": "Seleccionar supermercado",
   "sep": "Sep",
-  "shopping": "Compras",
-  "shoppingTitle": "Compras",
+  "shopping": "Hacer la compra",
+  "shoppingTitle": "Hacer la compra",
   "signUp": "Registrarse",
   "signupSuccess": "Registro exitoso",
   "sodium": "Sodio",
@@ -210,6 +211,5 @@
   "weightInGrams": "Peso (g)",
   "weightInKg": "Peso (kg)",
   "year": "Año",
-  "yes": "Sí",
-  "enterValidEmail": "Por favor, introduce una dirección de correo electrónica válida"
+  "yes": "Sí"
 }
