start to implement discount feature

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -40,6 +40,13 @@
   "deleteButtonTooltip": "Nährstoff löschen",
   "dessert": "Dessert",
   "details": "Details",
+  "discountedPrice": "Reduzierter Preis",
+  "discountedPricePerKg": "Reduzierter Preis/Kg",
+  "discountedQuantityOwned": "Reduzierte Menge",
+  "discountedQuantityUnitOwned": "Reduzierte Stückzahl",
+  "discountedQuantityWeightOwned": "Reduziertes Gewicht",
+  "discountedUnitPrice": "Reduzierter Stückpreis",
+  "enterDiscountedPrice": "Reduzierten Preis eingeben",
   "drinks": "Getränke",
   "edit_macronutrient": "Nährstoff bearbeiten",
   "edit_value_100g": "Wert bearbeiten (100g)",
