--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -40,6 +40,13 @@
   "deleteButtonTooltip": "Delete macronutrient",
   "dessert": "Dessert",
   "details": "Details",
+  "discountedPrice": "Discounted Price",
+  "discountedPricePerKg": "Discounted Price/Kg",
+  "enterDiscountedPrice": "Enter discounted price",
+  "discountedQuantityOwned": "Discounted Quantity",
+  "discountedQuantityUnitOwned": "Discounted Unit Quantity",
+  "discountedQuantityWeightOwned": "Discounted Weight",
+  "discountedUnitPrice": "Discounted Unit Price",
   "drinks": "Drinks",
   "edit_macronutrient": "Edit Macronutrient",
   "edit_value_100g": "Edit value (100g)",
