--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -40,6 +40,12 @@
   "deleteButtonTooltip": "Eliminar macronutriente",
   "dessert": "Postre",
   "details": "Detalles",
+  "discountedPrice": "Precio con Descuento",
+  "discountedPricePerKg": "Precio/Kg con Descuento",
+  "discountedQuantityOwned": "Cantidad con Descuento",
+  "discountedQuantityUnitOwned": "Cantidad Unitaria con Descuento",
+  "discountedQuantityWeightOwned": "Peso con Descuento",
+  "discountedUnitPrice": "Precio Unitario con Descuento",
   "drinks": "Bebidas",
   "edit_macronutrient": "Editar macronutriente",
   "edit_value_100g": "Editar valor (100g)",
@@ -47,6 +53,7 @@
   "editProduct": "Editar producto",
   "editQuantity": "Editar cantidad",
   "editStorage": "Editar almacenamiento",
+  "enterDiscountedPrice": "Insertar precio descuento",
   "email": "Correo electrónico",
   "energy": "Energía",
   "enterAmount": "Insertar cantidad",
