--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -40,6 +40,12 @@
   "deleteButtonTooltip": "Supprimer le macronutriment",
   "dessert": "Dessert",
   "details": "Détails",
+  "discountedPrice": "Prix Réduit",
+  "discountedPricePerKg": "Prix/Kg Réduit",
+  "discountedQuantityOwned": "Quantité Réduite",
+  "discountedQuantityUnitOwned": "Quantité Unitaire Réduite",
+  "discountedQuantityWeightOwned": "Poids Réduit",
+  "discountedUnitPrice": "Prix Unitaire Réduit",
   "drinks": "Boissons",
   "edit_macronutrient": "Modifier le macronutriment",
   "edit_value_100g": "Modifier la valeur (100g)",
@@ -47,6 +53,7 @@
   "editProduct": "Modifier le produit",
   "editQuantity": "Modifier la quantité",
   "editStorage": "Modifier le stockage",
+  "enterDiscountedPrice": "Entrer le prix réduit",
   "email": "Email",
   "energy": "Énergie",
   "enterAmount": "Entrer le montant",
