--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -40,6 +40,12 @@
   "deleteButtonTooltip": "Elimina macronutriente",
   "dessert": "Dolce",
   "details": "Dettagli",
+  "discountedPrice": "Prezzo Scontato",
+  "discountedPricePerKg": "Prezzo/Kg Scontato",
+  "discountedQuantityOwned": "Quantità Scontata",
+  "discountedQuantityUnitOwned": "Quantità Unità Scontata",
+  "discountedQuantityWeightOwned": "Peso Scontato",
+  "discountedUnitPrice": "Prezzo Unitario Scontato",
   "drinks": "Bevande",
   "edit_macronutrient": "Modifica Macronutriente",
   "edit_value_100g": "Modifica valore (100g)",
@@ -47,6 +53,7 @@
   "editProduct": "Modifica Prodotto",
   "editQuantity": "Modifica Quantità",
   "editStorage": "Modifica Dispensa",
+  "enterDiscountedPrice": "Inserisci il prezzo scontato",
   "email": "Email",
   "energy": "Energia",
   "enterAmount": "Inserisci l'importo",
