fix discounted products

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -48,6 +48,7 @@
   "discountedUnitPrice": "Reduzierter Stückpreis",
   "enterDiscountedPrice": "Reduzierten Preis eingeben",
   "drinks": "Getränke",
+  "discountedProducts": "Reduzierte Produkte",
   "edit_macronutrient": "Nährstoff bearbeiten",
   "edit_value_100g": "Wert bearbeiten (100g)",
   "editButtonTooltip": "Nährstoff bearbeiten",
