--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -47,6 +47,7 @@
   "discountedQuantityWeightOwned": "Peso con Descuento",
   "discountedUnitPrice": "Precio Unitario con Descuento",
   "drinks": "Bebidas",
+  "discountedProduct": "Producto con Descuento",
   "edit_macronutrient": "Editar macronutriente",
   "edit_value_100g": "Editar valor (100g)",
   "editButtonTooltip": "Editar macronutriente",
