--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -47,6 +47,7 @@
   "discountedQuantityWeightOwned": "Poids Réduit",
   "discountedUnitPrice": "Prix Unitaire Réduit",
   "drinks": "Boissons",
+  "discountedProduct": "Produit reduit",
   "edit_macronutrient": "Modifier le macronutriment",
   "edit_value_100g": "Modifier la valeur (100g)",
   "editButtonTooltip": "Modifier le macronutriment",
