--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -47,6 +47,7 @@
   "discountedQuantityWeightOwned": "Peso Scontato",
   "discountedUnitPrice": "Prezzo Unitario Scontato",
   "drinks": "Bevande",
+  "discountedProduct": "Prodotto Scontato",
   "edit_macronutrient": "Modifica Macronutriente",
   "edit_value_100g": "Modifica valore (100g)",
   "editButtonTooltip": "Modifica macronutriente",
