small fixes dad

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -42,13 +42,12 @@
   "details": "Details",
   "discountedPrice": "Reduzierter Preis",
   "discountedPricePerKg": "Reduzierter Preis/Kg",
+  "discountedProducts": "Reduzierte Produkte",
   "discountedQuantityOwned": "Reduzierte Menge",
   "discountedQuantityUnitOwned": "Reduzierte Stückzahl",
   "discountedQuantityWeightOwned": "Reduziertes Gewicht",
   "discountedUnitPrice": "Reduzierter Stückpreis",
-  "enterDiscountedPrice": "Reduzierten Preis eingeben",
   "drinks": "Getränke",
-  "discountedProducts": "Reduzierte Produkte",
   "edit_macronutrient": "Nährstoff bearbeiten",
   "edit_value_100g": "Wert bearbeiten (100g)",
   "editButtonTooltip": "Nährstoff bearbeiten",
@@ -59,10 +58,12 @@
   "energy": "Energie",
   "enterAmount": "Betrag eingeben",
   "enterBudget": "Budget eingeben",
+  "enterDiscountedPrice": "Reduzierten Preis eingeben",
   "enterEmail": "Bitte E-Mail eingeben",
   "enterPassword": "Bitte Passwort eingeben",
   "enterProductName": "Produktnamen eingeben",
   "enterUsername": "Bitte Benutzernamen eingeben",
+  "enterValidEmail": "Bitte gib eine gültige E-Mail-Adresse ein",
   "error": "Fehler",
   "errorUpdatingPassword": "Fehler beim Aktualisieren des Passworts",
   "expenseDeleted": "Ausgabe erfolgreich gelöscht",
@@ -156,7 +157,7 @@
   "purchaseDate": "Kaufdatum",
   "quantity": "Menge",
   "quantityInKg": "Gewichtsmenge (kg)",
-  "quantityOwned": "Vorhandene Menge",
+  "quantityOwned": "Verpackung Menge",
   "quantityUnitOwned": "Vorhandene Einheiten",
   "quantityWeightOwned": "Vorhandenes Gesamtgewicht",
   "recipeTips": "Rezepttipps",
@@ -218,6 +219,5 @@
   "weightInGrams": "Gewicht (g)",
   "weightInKg": "Gewicht (kg)",
   "year": "Jahr",
-  "yes": "Ja",
-  "enterValidEmail": "Bitte gib eine gültige E-Mail-Adresse ein"
+  "yes": "Ja"
 }
