--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -157,7 +157,7 @@
   "purchaseDate": "Fecha de compra",
   "quantity": "Cantidad",
   "quantityInKg": "Cantidad en peso (kg)",
-  "quantityOwned": "Cantidad disponible",
+  "quantityOwned": "Contidad disponible",
   "quantityUnitOwned": "Unidades disponibles",
   "quantityWeightOwned": "Peso total disponible",
   "recipeTips": "Consejos de recetas",
