--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -156,7 +156,7 @@
   "purchaseDate": "Date d'achat",
   "quantity": "Quantité",
   "quantityInKg": "Quantité en poids (kg)",
-  "quantityOwned": "Quantité possédée",
+  "quantityOwned": "Contenance possédée",
   "quantityUnitOwned": "Unités possédées",
   "quantityWeightOwned": "Poids total possédé",
   "recipeTips": "Conseils de recettes",
