--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -156,7 +156,7 @@
   "purchaseDate": "Data di acquisto",
   "quantity": "Quantità",
   "quantityInKg": "Quantità in peso (kg)",
-  "quantityOwned": "Quantità posseduta",
+  "quantityOwned": "Confezioni possedute",
   "quantityUnitOwned": "Unità possedute",
   "quantityWeightOwned": "Peso totale posseduto",
   "recipeTips": "Consigli per la ricetta",
