start to implement recovery password and export-import data

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -20,6 +20,8 @@
   "chooseFromGallery": "Aus Galerie wählen",
   "close": "Schließen",
   "colorLabel": "{color}",
+  "exportDatabase": "Datenbank exportieren",
+    "importDatabase": "Datenbank importieren",
   "confirm": "Bestätigen",
   "confirmDelete": "Möchten Sie diesen Supermarkt wirklich löschen?",
   "confirmDeleteExpense": "Möchten Sie diese Ausgabe wirklich löschen?",
@@ -55,6 +57,12 @@
   "editQuantity": "Menge bearbeiten",
   "editStorage": "Lagerort bearbeiten",
   "email": "E-Mail",
+  "send": "Senden",
+  "verificationEmailSent": "Bestätigungs-E-Mail gesendet",
+  "passwordResetEmailSent": "Passwort-Reset-E-Mail gesendet",
+  "forgotPassword": "Passwort vergessen?",
+  "passwordReset": "Passwort zurücksetzen",
+  "emailNotVerified": "E-Mail nicht bestätigt",
   "energy": "Energie",
   "enterAmount": "Betrag eingeben",
   "enterBudget": "Budget eingeben",
