--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -56,6 +56,12 @@
   "editQuantity": "Edit Quantity",
   "editStorage": "Edit Storage",
   "email": "Email",
+  "verificationEmailSent": "Verification email sent",
+  "passwordResetEmailSent": "Password reset email sent",
+  "emailNotVerified": "Email not verified",
+  "forgotPassword": "Forgot password?",
+  "passwordReset": "Password Reset",
+  "send": "Send",
   "energy": "Energy",
   "enterAmount": "Enter amount",
   "enterBudget": "Enter budget",
@@ -202,6 +208,8 @@
   "unitPrice": "Unit Price",
   "units": "Units",
   "unitWeight": "Unit Weight",
+  "exportDatabase": "Export Database",
+    "importDatabase": "Import Database",
   "update": "Update",
   "updatePassword": "Update Password",
   "username": "Username",
