--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -19,6 +19,8 @@
   "cholesterol": "Colesterol",
   "chooseFromGallery": "Elegir de la galería",
   "close": "Cerrar",
+  "exportDatabase": "Exportar base de datos",
+    "importDatabase": "Importar base de datos",
   "colorLabel": "{color}",
   "confirm": "Confirmar",
   "confirmDelete": "¿Estás seguro de que quieres eliminar este supermercado?",
@@ -56,6 +58,12 @@
   "editStorage": "Editar almacenamiento",
   "enterDiscountedPrice": "Insertar precio descuento",
   "email": "Correo electrónico",
+  "verificationEmailSent": "Correo de verificación enviado",
+  "passwordResetEmailSent": "Correo de restablecimiento de contraseña enviado",
+  "emailNotVerified": "El correo electrónico no ha sido verificado",
+  "forgotPassword": "Contrasena olvidada?",
+  "passwordReset": "Restablecer contraseña",
+  "send": "Enviar",
   "energy": "Energía",
   "enterAmount": "Insertar cantidad",
   "enterBudget": "Insertar presupuesto",
