--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -19,6 +19,8 @@
   "cholesterol": "Cholestérol",
   "chooseFromGallery": "Choisir depuis la galerie",
   "close": "Fermer",
+  "exportDatabase": "Exporter la base de données",
+  "importDatabase": "Importer la base de données",
   "colorLabel": "{color}",
   "confirm": "Confirmer",
   "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce supermarché ?",
@@ -56,6 +58,12 @@
   "editStorage": "Modifier le stockage",
   "enterDiscountedPrice": "Entrer le prix réduit",
   "email": "Email",
+  "verificationEmailSent": "Email de verification envoyé",
+  "passwordResetEmailSent": "Email de reinitialisation de mot de passe envoyé",
+  "forgotPassword": "Mot de passe oublé?",
+  "passwordReset": "Reinitialiser le mot de passe",
+  "send": "Envoyer",
+  "emailNotVerified": "Email non verifié",
   "energy": "Énergie",
   "enterAmount": "Entrer le montant",
   "enterBudget": "Entrer le budget",
