--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -56,6 +56,12 @@
   "editStorage": "Modifica Dispensa",
   "enterDiscountedPrice": "Inserisci il prezzo scontato",
   "email": "Email",
+  "verificationEmailSent": "Email di verifica inviata",
+  "passwordResetEmailSent": "Email di reimpostazione della password inviata",
+  "emailNotVerified": "E-Mail non verificata",
+  "forgotPassword": "Password dimenticata?",
+  "passwordReset": "Reimposta Password",
+  "send": "Invia",
   "energy": "Energia",
   "enterAmount": "Inserisci l'importo",
   "enterBudget": "Inserisci il budget",
@@ -202,6 +208,8 @@
   "unitPrice": "Prezzo unitario",
   "units": "Unità",
   "unitWeight": "Peso unitario",
+  "exportDatabase": "Esporta Database",
+  "importDatabase": "Importa Database",
   "update": "Aggiorna",
   "updatePassword": "Aggiorna Password",
   "username": "Nome utente",
