finish export and import data

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -44,6 +44,7 @@
   "details": "Details",
   "discountedPrice": "Reduzierter Preis",
   "discountedPricePerKg": "Reduzierter Preis/Kg",
+  "discountedProduct": "Reduzierte Produkte",
   "discountedProducts": "Reduzierte Produkte",
   "discountedQuantityOwned": "Reduzierte Menge",
   "discountedQuantityUnitOwned": "Reduzierte Stückzahl",
