fix download path and view meals

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -22,6 +22,9 @@
   "colorLabel": "{color}",
   "exportDatabase": "Datenbank exportieren",
     "importDatabase": "Datenbank importieren",
+  "groupMealsByDay": "Mahlzeiten nach Tag gruppieren",
+  "ungroupMeals": "Mahlzeiten entgruppieren",
+  "mealsForDay": "Mahlzeiten für den Tag",
   "confirm": "Bestätigen",
   "confirmDelete": "Möchten Sie diesen Supermarkt wirklich löschen?",
   "confirmDeleteExpense": "Möchten Sie diese Ausgabe wirklich löschen?",
