--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -210,6 +210,9 @@
   "unitWeight": "Unit Weight",
   "exportDatabase": "Export Database",
     "importDatabase": "Import Database",
+  "groupMealsByDay": "Group meals by day",
+  "ungroupMeals": "Ungroup meals",
+  "mealsForDay": "Meals for the day",
   "update": "Update",
   "updatePassword": "Update Password",
   "username": "Username",
