--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -21,6 +21,9 @@
   "close": "Cerrar",
   "exportDatabase": "Exportar base de datos",
     "importDatabase": "Importar base de datos",
+  "groupMealsByDay": "Agrupar comidas por día",
+  "ungroupMeals": "Desagrupar comidas",
+  "mealsForDay": "Comidas para el día",
   "colorLabel": "{color}",
   "confirm": "Confirmar",
   "confirmDelete": "¿Estás seguro de que quieres eliminar este supermercado?",
