--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -21,6 +21,9 @@
   "close": "Fermer",
   "exportDatabase": "Exporter la base de données",
   "importDatabase": "Importer la base de données",
+  "groupMealsByDay": "Grouper les repas par jour",
+  "ungroupMeals": "Dégrouper les repas",
+  "mealsForDay": "Repas pour la journée",
   "colorLabel": "{color}",
   "confirm": "Confirmer",
   "confirmDelete": "Êtes-vous sûr de vouloir supprimer ce supermarché ?",
