--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -210,6 +210,9 @@
   "unitWeight": "Peso unitario",
   "exportDatabase": "Esporta Database",
   "importDatabase": "Importa Database",
+  "groupMealsByDay": "Raggruppa pasti per giorno",
+  "ungroupMeals": "Separa pasti",
+  "mealsForDay": "Pasti per il giorno",
   "update": "Aggiorna",
   "updatePassword": "Aggiorna Password",
   "username": "Nome utente",
